hopefully fixed bottom margin for spacing

--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,3 @@
     -webkit-transform: rotateZ(360deg);
   }
 }
-
-.main-footer {
-  max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  height: 36px;
-  padding: 0px 0 30px 0;
-  align-items: center;
-  margin-top: 276px;
-}
