--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,7 +5,7 @@
   height: 36px;
   padding: 0px 0 30px 0;
   align-items: center;
-  margin-top: 276px;
+  /* margin-top: 276px; */
 }
 
 .main-footer .footer-nav {
