--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,7 @@
+.home {
+  margin-bottom: 276px;
+}
+
 .alpha-mode {
   width: 100%;
   position: fixed;
